[package]
name = "sainome"
version = "0.1.3"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"
description = "A generic dice bot for RPG"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
peg = "0.6.2"
regex = "1"

[dev-dependencies]
rand = "0.7.3"
